# spider-history

./: CMakeLists.txt  Makefile.am  Makefile.in  configure.in  ha_spider.cc  ha_spider.h  plug.in  spd_conn.cc  spd_conn.h  spd_copy_tables.cc  spd_copy_tables.h  spd_db_conn.cc  spd_db_conn.h  spd_db_handlersocket.cc  spd_db_handlersocket.h  spd_db_include.h  spd_db_mysql.cc  spd_db_mysql.h  spd_db_oracle.cc  spd_db_oracle.h  spd_direct_sql.cc  spd_direct_sql.h  spd_err.h  spd_i_s.cc  spd_include.h  spd_malloc.cc  spd_malloc.h  spd_param.cc  spd_param.h  spd_ping_table.cc  spd_ping_table.h  spd_sys_table.cc  spd_sys_table.h  spd_table.cc  spd_table.h  spd_trx.cc  spd_trx.h  spd_udf.cc  spd_udf.def  spd_udf.h
hs_client/: allocator.hpp  auto_addrinfo.hpp  config.hpp  escape.cpp  escape.hpp  hstcpcli.cpp  hstcpcli.hpp  socket.cpp  socket.hpp  string_buffer.hpp  string_ref.hpp  string_util.cpp
